--- a/root/welcome.html
+++ b/root/welcome.html
@@ -11,14 +11,18 @@
 	<br/>
 		<br/>
 		<form action="5" method="post">
- 			<div align="center"><button type="submit">xxx.jpg</button></div>
+ 			<div align="center"><button type="submit">图片</button></div>
                 </form>
 		<br/>
                 <form action="6" method="post">
-                        <div align="center"><button type="submit" >xxx.avi</button></div>
+                        <div align="center"><button type="submit" >视频</button></div>
                 </form>
 		<br/>
 		
+	 <form action="7" method="post">
+                        <div align="center"><button type="submit" >书签</button></div>
+                </form>
+		<br/>
         </div>
     </body>
 </html>
