--- a/root/judge.html
+++ b/root/judge.html
@@ -17,7 +17,10 @@
                 <form action="1" method="post">
                         <div align="center"><button type="submit" >已有账号</button></div>
                 </form>
-		
+		<br/>
+		<form action="y" method="post">
+ 			<div align="center"><button type="submit">游客登录</button></div>
+                </form>
 		
         </div>
     </body>
