--- a/root/picture.html
+++ b/root/picture.html
@@ -6,10 +6,10 @@
     </head>
     <body><br/>
 <br/>
-<div align="center"><font size="5"> <strong>漫展拿的海报就是这张图</strong></font></div>
+<div align="center"><font size="5"> <strong>测试图片</strong></font></div>
 <br/>
-<!--<div  align="center">菲谢尔</div>-->
+<!--<div  align="center">天空</div>-->
 <br/>
 <br/>
-<div align="center"><img src="./mmm.jpg" title="菲谢尔"/></div>
+<div align="center"><img src="./mmm.jpg" title="天空"/></div>
 </html>
